--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -371,6 +371,10 @@
 "error_uploading_photo" = "Не удалось загрузить фотографию";
 "too_many_pictures" = "Не больше 10 фотографий";
 
+"drag_files_here" = "Перетащите файлы сюда";
+"only_images_accepted" = "Файл \"$1\" не является изображением";
+"max_filesize" = "Максимальный размер файла — $1 мегабайт";
+
 /* Notes */
 
 "notes" = "Заметки";
