--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -364,6 +364,7 @@
 "upd_f" = "обновила фотографию на своей странице";
 "upd_g" = "обновило фотографию группы";
 
+"add_photos" = "Добавить фотографии";
 "upload_picts" = "Загрузить фотографии";
 "end_uploading" = "Завершить загрузку";
 "photos_successfully_uploaded" = "Фотографии успешно загружены";
@@ -374,6 +375,13 @@
 "drag_files_here" = "Перетащите файлы сюда";
 "only_images_accepted" = "Файл \"$1\" не является изображением";
 "max_filesize" = "Максимальный размер файла — $1 мегабайт";
+
+"uploading_photos_from_computer" = "Загрузка фотографий с Вашего компьютера";
+"supported_formats" = "Поддерживаемые форматы файлов: JPG, PNG и GIF.";
+"max_load_photos" = "Вы можете загружать до 10 фотографий за один раз.";
+"tip" = "Подсказка";
+"tip_ctrl" = "для того, чтобы выбрать сразу несколько фотографий, удерживайте клавишу Ctrl при выборе файлов в ОС Windows или клавишу CMD в Mac OS.";
+"album_poster" = "Обложка альбома";
 
 /* Notes */
 
@@ -1029,6 +1037,7 @@
 "media_file_corrupted_or_too_large" = "Файл медиаконтента повреждён или слишком велик.";
 "post_is_empty_or_too_big" = "Пост пустой или слишком большой.";
 "post_is_too_big" = "Пост слишком большой.";
+"description_too_long" = "Описание слишком длинное.";
 
 /* Admin actions */
 
