--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -186,6 +186,7 @@
 "nsfw_warning" = "Данный пост может содержать 18+ контент";
 "report" = "Пожаловаться";
 "attach" = "Прикрепить";
+"detach" = "Открепить";
 "attach_photo" = "Прикрепить фото";
 "attach_video" = "Прикрепить видео";
 "draw_graffiti" = "Нарисовать граффити";
@@ -651,6 +652,12 @@
 "view_video" = "Просмотр";
 "change_video" = "Изменить видеозапись";
 "unknown_video" = "Эта видеозапись не поддерживается в вашей версии OpenVK.";
+
+"selecting_video" = "Выбор видеозаписей";
+"upload_new_video" = "Загрузить новое видео";
+"max_attached_videos" = "Максимум 10 видеозаписей";
+"no_videos" = "У вас нет видео.";
+"no_videos_results" = "Нет результатов.";
 
 /* Notifications */
 
