--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -404,6 +404,7 @@
 "is_x_photos_other" = "Всего $1 фотографий.";
 
 "all_photos" = "Все фотографии";
+"error_uploading_photo" = "Не удалось загрузить фотографию. Текст ошибки: ";
 
 /* Notes */
 
