--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -405,6 +405,7 @@
 
 "all_photos" = "Все фотографии";
 "error_uploading_photo" = "Не удалось загрузить фотографию. Текст ошибки: ";
+"too_many_photos" = "Слишком много фотографий.";
 
 /* Notes */
 
