--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -329,6 +329,7 @@
 "album" = "Альбом";
 "albums" = "Альбомы";
 "photos" = "фотографий";
+"photo" = "Фотография";
 "create_album" = "Создать альбом";
 "edit_album" = "Редактировать альбом";
 "edit_photo" = "Изменить фотографию";
@@ -406,6 +407,8 @@
 "all_photos" = "Все фотографии";
 "error_uploading_photo" = "Не удалось загрузить фотографию. Текст ошибки: ";
 "too_many_photos" = "Слишком много фотографий.";
+
+"photo_x_from_y" = "Фотография $1 из $2";
 
 /* Notes */
 
