--- a/locales/en.strings
+++ b/locales/en.strings
@@ -347,6 +347,7 @@
 "albums" = "Albums";
 "album" = "Album";
 "photos" = "photos";
+"photo" = "Photo";
 "create_album" = "Create album";
 "edit_album" = "Edit album";
 "edit_photo" = "Edit photo";
@@ -424,6 +425,8 @@
 "all_photos" = "All photos";
 "error_uploading_photo" = "Error when uploading photo. Error text: ";
 "too_many_photos" = "Too many photos.";
+
+"photo_x_from_y" = "Photo $1 from $2";
 
 /* Notes */
 
