--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -390,10 +390,10 @@
 
 "drag_files_here" = "Перетягніть файли сюди";
 "only_images_accepted" = "Файл \"$1\" не є зображенням";
-"max_filesize" = "Максимальний розмір файла — $1 мегабайт";
+"max_filesize" = "Максимальний розмір файлу — $1 мегабайт";
 
 "uploading_photos_from_computer" = "Завантаження фотографій з Вашого ПК";
-"supported_formats" = "Підтримувані формати зображень: JPG, PNG и GIF.";
+"supported_formats" = "Підтримувані формати зображень: JPG, PNG й GIF.";
 "max_load_photos" = "Ви можете завантажити до 10 фотографій за один раз.";
 "tip" = "Порада";
 "tip_ctrl" = "щоб обрати кілька фотографій одразу, утримуйте клавішу Ctrl під час вибору файлів в OS Windows або клавішу CMD у Mac OS.";
@@ -640,7 +640,7 @@
 "two_factor_authentication_backup_codes_1" = "Резервні коди дозволяють підтверджувати вхід, коли у вас немає доступу до телефону, наприклад, у подорожі.";
 "two_factor_authentication_backup_codes_2" = "У вас є ще <b>10 кодів</b>, кожним кодом можна скористатися тільки один раз. Надрукуйте їх, приберіть в надійне місце і використовуйте, коли будуть потрібні коди для підтвердження входу.";
 "two_factor_authentication_backup_codes_3" = "Ви можете отримати нові коди, якщо вони закінчуються. Дійсні тільки останні створені резервні коди.";
-"viewing_backup_codes" = "Перегляд резевних кодів";
+"viewing_backup_codes" = "Перегляд резервних кодів";
 "disable_2fa" = "Вимкнути 2FA";
 "viewing" = "Переглянути";
 
@@ -1116,7 +1116,7 @@
 "error_user_not_exists" = "Користувач або набір не існують.";
 "error_no_rights_gifts" = "Не вдалося підтвердити права на подарунок.";
 "error_no_more_gifts" = "У вас більше не залишилось цих подарунків.";
-"error_no_money" = "АХАХАХА ЛОШАРА ПІЗДУЙ НА ЗАРОБІТКИ У ПОЛЬШУ";
+"error_no_money" = "АХАХАХА ЛОШАРА ПІЗДУЙ НА ЗАРОБІТКИ У ПОЛЬЩУ";
 /* трррр шкібіді доп доп доп доп єс єс єс) */
 
 "description_too_long" = "Опис надто довгий.";
@@ -1124,7 +1124,7 @@
 "gift_sent" = "Подарунок відправлено";
 "gift_sent_desc" = "Ви відправили <b>$1</b> за $2 голосів";
 
-"error_on_server_side" = "Виникла помилка на боці серверу. Зверніться до системного адміністратора.";
+"error_on_server_side" = "Виникла помилка на боці сервера. Зверніться до системного адміністратора.";
 "error_no_group_name" = "Ви не ввели назву групи.";
 
 "success_action" = "Операція пройшла успішно";
@@ -1133,7 +1133,7 @@
 
 "error_when_uploading_photo" = "Не вдалося зберегти фотографію.";
 
-"new_changes_desc" = "Нові дані з'являться у ваші групі.";
+"new_changes_desc" = "Нові дані з'являться у вашій групі.";
 "comment_is_changed" = "Коментар до адміністратора змінено";
 "comment_is_deleted" = "Коментар до адміністратора видалено";
 "comment_is_too_long" = "Коментар надто довгий ($1 символів замість 36 символів)";
@@ -1157,13 +1157,13 @@
 "select_file" = "Оберіть файл";
 "new_description_will_appear" = "Оновлений опис з'явиться на сторінці з фото.";
 "photo_is_deleted" = "Фотографія видалена";
-"photo_is_deleted_desc" = "Ця світлина було успішно видалено.";
+"photo_is_deleted_desc" = "Ця світлина була успішно видалена.";
 
 "no_video" = "Немає відеозапису";
 "no_video_desc" = "Оберіть файл або вкажіть URL.";
 "error_occured" = "Виникла помилка";
 "error_video_damaged_file" = "Файл пошкоджений або не має відеозапису.";
-"error_video_incorrect_link" = "Вирогідно, посилання некоректне.";
+"error_video_incorrect_link" = "Вірогідно, посилання некоректне.";
 "error_video_no_title" = "Відео не може бути опубліковано без назви.";
 
 "new_data_video" = "Оновлений опис з'явиться на сторінці з відео.";
@@ -1181,7 +1181,7 @@
 "content_is_deleted" = "Коментар видалено, а користувач отримав попередження.";
 "report_is_ignored" = "Скаргу проігноровано.";
 "group_owner_is_banned" = "Творець спільноти успішно заблоковано.";
-"group_is_banned" = "Спільнота успішно заблоковано";
+"group_is_banned" = "Спільноту успішно заблоковано";
 
 /* Admin actions */
 
@@ -1275,7 +1275,7 @@
 "admin_banned_link_initiator" = "Ініціатор";
 "admin_banned_link_not_specified" = "Посилання не зазначено";
 "admin_banned_link_not_found" = "Посилання не знайдено";
-"admin_gift_moved_successfully" = "Подарок успішно переміщено";
+"admin_gift_moved_successfully" = "Подарунок успішно переміщено";
 "admin_gift_moved_to_recycle" = "Тепер подарунок у <b>кошику</b>.";
 "logs" = "Логи";
 "logs_anything" = "Будь-яке";
@@ -1291,7 +1291,7 @@
 "logs_id_object" = "ID об'єкту";
 "logs_uuid_user" = "UUID користувача";
 "logs_change_type" = "Тип зміни";
-"logs_change_object" = "Тип об'єкту";
+"logs_change_object" = "Тип об'єкта";
 
 "logs_user" = "Користувач";
 "logs_object" = "Об'єкт";
@@ -1373,7 +1373,7 @@
 
 /* Away */
 
-"transition_is_blocked" = "Перехід по посиланню заборонений";
+"transition_is_blocked" = "Перехід за посиланням заборонений";
 "caution" = "Попередження";
 "url_is_banned" = "Перехід неможливий";
 "url_is_banned_comment" = "Адміністрація <b>$1</b> не рекомендує переходити за цим посиланням.";
@@ -1659,29 +1659,29 @@
 
 /* BadBrowser */
 
-"deprecated_browser" = "Застрарілий браузер";
-"deprecated_browser_description" = "Для перегляду цього контенту вам необхідний >Firefox ESR 52 або еквавілент по функціоналу навігатор по всесвітній мережі інтернет. Співчуваємо про це.";
+"deprecated_browser" = "Застарілий браузер";
+"deprecated_browser_description" = "Для перегляду цього контенту вам необхідний >Firefox ESR 52 або еквівалент по функціоналу навігатор по всесвітньою мережею інтернет. Співчуваємо про це.";
 
 /* Statistics */
 
-"coverage" = "Охват";
-"coverage_this_week" = "Цей графік відображає охват за останні 7 днів.";
+"coverage" = "Обхват";
+"coverage_this_week" = "Цей графік відображає обхват за останні 7 днів.";
 "views" = "Перегляди";
-"views_this_week" = "Цей графік відображає перегяли дописів спільноти за остані 7 днів.";
+"views_this_week" = "Цей графік відображає перегляди дописів спільноти за остані 7 днів.";
 
-"full_coverage" = "Повний охват";
+"full_coverage" = "Повний обхват";
 "all_views" = "Усі перегляди";
 
-"subs_coverage" = "Охват підписників";
+"subs_coverage" = "обхват підписників";
 "subs_views" = "Перегляди підписників";
 
-"viral_coverage" = "Віральний охват";
+"viral_coverage" = "Віральний обхват";
 "viral_views" = "Віральні перегляди";
 
 /* Sudo */
 
 "you_entered_as" = "Ви увійшли як";
-"please_rights" = "наполегливо просимо, шануйте право на таємницю переписки інших людей та не зловживайте підміною користувача.";
+"please_rights" = "наполегливо просимо, шануйте право на таємницю листування інших людей та не зловживайте підміною користувача.";
 "click_on" = "Натисніть";
 "there" = "тут";
 "to_leave" = "щоб вийти";
@@ -1713,7 +1713,7 @@
 
 "section" = "Розділ";
 "template_ban" = "Блокування за шаблоном";
-"active_templates" = "Діючі шаблони";
+"active_templates" = "Чинні шаблони";
 "users_reports" = "Скарги користувачів";
 "substring" = "Підрядок";
 "n_user" = "Користувач";
@@ -1729,7 +1729,7 @@
 "select_section_for_start" = "Для початку роботи, оберіть розділ";
 "results_will_be_there" = "Тут будуть відображатися результати пошуку";
 "search_results" = "Результати пошуку";
-"cnt" = "шт";
+"cnt" = "шт.";
 
 "link_to_page" = "Посилання на сторінку";
 "or_subnet" = "або підмережа";
