--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1743,5 +1743,5 @@
 "count" = "Кількість";
 "time" = "Час";
 
-"roll_back" = "откатить";
-"roll_backed" = "откачено";
+"roll_back" = "відкотити";
+"roll_backed" = "відкачано";
